# project_Automat

./: Alphabet.cpp  Alphabet.h  AutomatonException.cpp  AutomatonException.h  CMakeLists.txt  DeterminateFiniteAutomaton.cpp  DeterminateFiniteAutomaton.h  DeterminateFiniteAutomatonInt.cpp  DeterminateFiniteAutomatonInt.h  State.cpp  State.h  main.cpp
